--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "SerpentAI-Image"
-version = "0.1.1"
+version = "0.1.2"
 description = "Image class for Serpent.AI projects"
 readme = "README.md"
 authors = ["Nicholas Brochu <nicholas@serpent.ai>"]
@@ -18,7 +18,7 @@ classifiers = [
     "Operating System :: MacOS",
     "Operating System :: Unix",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "Topic :: Software Development :: Libraries",
     "Topic :: Multimedia :: Graphics"
 ]
@@ -28,17 +28,15 @@ packages = [
 include = []
 
 [tool.poetry.dependencies]
-python = ">=3.8"
-
-numpy = "~1.18"
-pillow = "~7.1"
-scikit-image = "~0.17.1"
-scikit-learn = "~0.22"
+python = "^3.9"
+Pillow = "^8.3.2"
+scikit-image = "^0.18.3"
+scikit-learn = "^1.0"
 
 [tool.poetry.dev-dependencies]
-ipython = "~7.14"
-notebook = "~6.0"
+ipython = "^7.28.0"
+notebook = "^6.4.4"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
